--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -13,7 +13,7 @@
     <main>
         <section class="about-me">
             <h1>about me</h1>
-            <img src="/images/profile-picture.jpg" alt="Your Name" class="profile-picture">
+            <img src="/images/profile-picture.jpg" alt="orangejuiceplz" class="profile-picture">
             <p>wip</p>
         </section>
 
