--- a/src/views/discord.ejs
+++ b/src/views/discord.ejs
@@ -14,7 +14,7 @@
         <section class="blog">
             <h1>Discord</h1>
             <article>
-                <h2>Discord c++</h2>
+                <h2>Discord</h2>
                 <p>todo: integrate discord</p>
             </article>
         </section>
