add discord to header

--- a/src/partials/header.ejs
+++ b/src/partials/header.ejs
@@ -8,6 +8,7 @@
           <li><a href="/blog" class="nav-button">Blog</a></li>
           <li><a href="/stats" class="nav-button">GitHub Stats</a></li>
           <li><a href="/contact" class="nav-button">Contact</a></li>
+          <li><a href="/discord" class="nav-button">Discord</a></li>
         </ul>
       </nav>
     </div>
