format blog, skills, and stats (stats wip)

--- a/src/views/blog.ejs
+++ b/src/views/blog.ejs
@@ -9,19 +9,19 @@
 </head>
 <body>
     <%- include('../partials/header') %>
-
     <main>
-        <section class="blog">
-            <h1>Blog</h1>
-            <article>
-                <h2>mastering c++</h2>
-                <p>going to integrate a content managing system</p>
-            </article>
+        <section class="blog featured-work">
+            <h1 class="neon-text pulse">blog</h1>
+            <div class="work-grid">
+                <article class="work-item">
+                    <h2 class="neon-text">mastering C++</h2>
+                    <p class="message-content">going to integrate a content managing system</p>
+                    <a href="#" class="project-link">Read More</a>
+                </article>
+            </div>
         </section>
     </main>
-
     <%- include('../partials/footer') %>
-
     <script src="/js/main.js"></script>
 </body>
 </html>
