--- a/src/views/skills.ejs
+++ b/src/views/skills.ejs
@@ -11,22 +11,22 @@
     <%- include('../partials/header') %>
     <main>
         <section class="skills">
-            <h1 class="float">my skills</h1>
+            <h1 class="pulse">my_skills.exe</h1>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <h2>programming langs</h2>
+                    <h2 class="neon-text">programming_langs</h2>
                     <ul>
                         <li class="pulse">C++</li>
                         <li class="pulse">python</li>
                         <li class="pulse">java</li>
                         <li class="pulse">html5</li>
-                        <li class="pulse">css</li>
-                        <li class="pulse">js</li>
+                        <li class="pulse">CSS</li>
+                        <li class="pulse">javascript</li>
                         <li class="pulse">shell</li>
                     </ul>
                 </div>
                 <div class="skill-category">
-                    <h2>web tech</h2>
+                    <h2 class="neon-text">web_tech</h2>
                     <ul>
                         <li class="pulse">html5</li>
                         <li class="pulse">CSS3</li>
@@ -34,13 +34,13 @@
                     </ul>
                 </div>
                 <div class="skill-category">
-                    <h2>tools && frameworks</h2>
+                    <h2 class="neon-text">tools_and_frameworks</h2>
                     <ul>
                         <li class="pulse">node.js</li>
                         <li class="pulse">express.js</li>
                         <li class="pulse">git</li>
                         <li class="pulse">docker</li>
-                        <li class="pulse">makefile/cmake</li>
+                        <li class="pulse">makefile/CMake</li>
                     </ul>
                 </div>
             </div>
