--- a/src/views/admin/create.ejs
+++ b/src/views/admin/create.ejs
@@ -1,21 +1,18 @@
-
 <%- include('../../partials/header') %>
-
 <main class="container mt-4">
   <div class="post-form">
     <h1><%= post ? 'Edit Post' : 'Create New Post' %></h1>
     <form action="<%= post ? `/blog/admin/edit/${post._id}` : '/blog/admin/create' %>" method="POST">
       <div>
         <label for="title">Title</label>
-        <input type="text" id="title" name="title" value="<%= post ? post.title : '' %>" required>
+        <input type="text" id="title" name="title" required value="<%= post ? post.title : '' %>">
       </div>
       <div>
         <label for="content">Content</label>
         <textarea id="content" name="content" required><%= post ? post.content : '' %></textarea>
       </div>
-      <button type="submit" class="cta-button"><%= post ? 'Update' : 'Create' %> Post</button>
+      <button type="submit"><%= post ? 'Update' : 'Create' %> Post</button>
     </form>
   </div>
 </main>
-
 <%- include('../../partials/footer') %>
