--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -1,23 +1,24 @@
 <footer>
-    <div class="footer-content">
-      <div class="footer-section contact">
-        <h3 class="pulse">socials</h3>
-        <div class="contact-links">
-          <a href="https://github.com/orangejuiceplz/" class="nav-button" target="_blank" rel="noopener noreferrer">github</a>
-          <a href="https://discord.gg/yYdE2S43cY" class="nav-button" target="_blank" rel="noopener noreferrer">discord</a>
-          <a href="https://mastodon.social/@orangejuiceplz" class="nav-button" target="_blank" rel="noopener noreferrer">mastodon</a>
-          <a href="https://x.com/lamdashidev" class="nav-button" target="_blank" rel="noopener noreferrer">X (Twitter)</a>
-        </div>
-      </div>
-      <div class="footer-section newsletter">
-        <h3 class="pulse">newsletter</h3>
-        <form class="newsletter-form">
-          <input type="email" placeholder="Enter your email" required>
-          <button type="submit" class="cta-button">subscribe</button>
-        </form>
-      </div>
-      <div class="footer-section copyright">
-        <p>&copy; <%= new Date().getFullYear() %> Lamdashi/orangejuiceplz </p>
+  <div class="footer-content">
+    <div class="footer-section contact">
+      <h3 class="pulse">socials</h3>
+      <div class="contact-links">
+        <a href="https://github.com/orangejuiceplz/" class="nav-button" target="_blank" rel="noopener noreferrer">github</a>
+        <a href="https://discord.gg/yYdE2S43cY" class="nav-button" target="_blank" rel="noopener noreferrer">discord</a>
+        <a href="https://mastodon.social/@orangejuiceplz" class="nav-button" target="_blank" rel="noopener noreferrer">mastodon</a>
+        <a href="https://x.com/lamdashidev" class="nav-button" target="_blank" rel="noopener noreferrer">X (Twitter)</a>
       </div>
     </div>
-  </footer>
+    <div class="footer-section newsletter">
+      <h3 class="pulse">newsletter</h3>
+      <form class="newsletter-form">
+        <input type="email" placeholder="Enter your email" required>
+        <button type="submit" class="cta-button">subscribe</button>
+      </form>
+    </div>
+    <div class="footer-section copyright">
+      <p>&copy; <%= new Date().getFullYear() %> Lamdashi/orangejuiceplz </p>
+    </div>
+  </div>
+  <script src="/js/scroll-animations.js"></script>
+</footer>
