--- a/src/views/admin/edit.ejs
+++ b/src/views/admin/edit.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Post</title>
+    <title>edit post</title>
     <link rel="stylesheet" href="/css/style.css">
     <script src="/js/starry-background.js"></script>
 </head>
@@ -11,17 +11,17 @@
     <%- include('../../partials/header') %>
     <main class="container mt-4">
         <div class="post-form">
-            <h1 class="neon-text pulse"><%= post ? 'Edit Post' : 'Create New Post' %></h1>
+            <h1 class="neon-text pulse"><%= post ? 'edit post' : 'create new post' %></h1>
             <form action="<%= post ? `/blog/admin/edit/${post._id}` : '/blog/admin/create' %>" method="POST">
                 <div class="form-group">
-                    <label for="title" class="neon-text">Title</label>
+                    <label for="title" class="neon-text">title</label>
                     <input type="text" id="title" name="title" value="<%= post ? post.title : '' %>" required class="form-control">
                 </div>
                 <div class="form-group">
-                    <label for="content" class="neon-text">Content</label>
+                    <label for="content" class="neon-text">content</label>
                     <textarea id="content" name="content" required class="form-control"><%= post ? post.content : '' %></textarea>
                 </div>
-                <button type="submit" class="cta-button float"><%= post ? 'Update' : 'Create' %> Post</button>
+                <button type="submit" class="cta-button float"><%= post ? 'update' : 'create' %> Post</button>
             </form>
         </div>
     </main>
