upd github link

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -22,7 +22,7 @@
                     <img src="/images/project1.jpg" alt="System-Monitor">
                     <h3>System-Monitor</h3>
                     <p> An improper console based tool to track system details in C++. Literally worse btop in every way </p>
-                    <a href="#" class="project-link">view project on github</a>
+                    <a href="https://github.com/orangejuiceplz/System-Monitor" class="project-link">view project on github</a>
                 </div>
                 <!-- more projects -->
             </div>
