add a pic for system-monitor

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -16,10 +16,10 @@
             <a href="/about" class="cta-button">learn more</a>
         </section>
         <section class="featured-work">
-            <h2>featured work</h2>
+            <h2>featured work of the day</h2>
             <div class="work-grid">
                 <div class="work-item">
-                    <img src="/images/project1.jpg" alt="System-Monitor">
+                    <img src="/images/project1.png" alt="System-Monitor">
                     <h3>System-Monitor</h3>
                     <p> An improper console based tool to track system details in C++. Literally worse btop in every way </p>
                     <a href="https://github.com/orangejuiceplz/System-Monitor" class="project-link">view project on github</a>
