--- a/src/views/stats.ejs
+++ b/src/views/stats.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %> | orangejuiceplz</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/stats.css">
     <script src="/js/starry-background.js"></script>
 </head>
 <body>
